# pixelpulse

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/research/: agentops-langfuse-patterns.md
docs/specs/: 2026-03-27-pixelpulse-design.md
docs/superpowers/plans/: 2026-03-27-dynamic-canvas.md
docs/superpowers/specs/: 2026-03-27-claude-code-plugin-design.md  2026-03-27-dynamic-canvas-design.md
examples/: autogen_example.py  basic.py  claude_code_example.py  crewai_example.py  decorator_example.py  langgraph_example.py  openai_agents_example.py  otel_example.py
plugins/claude-code/: .mcp.json  README.md
plugins/claude-code/.claude-plugin/: plugin.json
plugins/claude-code/agents/: session-analyzer.md
plugins/claude-code/hooks/: hooks.json
plugins/claude-code/mcp-server/: server.py
plugins/claude-code/scripts/: ensure_server.py  hook_handler.py
plugins/codex/: README.md  codex-config-example.json
plugins/gemini-cli/: README.md
plugins/vscode/: README.md  extension.js  package.json
src/pixelpulse/: __init__.py  bus.py  cli.py  config.py  core.py  decorators.py  lifecycle.py  otel.py  protocol.py  server.py
src/pixelpulse.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pixelpulse/adapters/: __init__.py  autogen.py  base.py  claude_code.py  (+4 more)
tests/: test_auto_instrument.py  test_autogen_adapter.py  test_bus.py  test_claude_code_adapter.py  test_cli.py  test_config.py  test_crewai_adapter.py  test_decorators.py  test_event_repo.py  test_langgraph_adapter.py  test_lifecycle.py  test_openai_agents_adapter.py  test_otel.py  test_protocol.py  test_run_repo.py  test_server.py  test_storage_models.py  test_storage_subscriber.py
tests/e2e/: test_langgraph_e2e.py  test_openai_agents_e2e.py
tests/functional/: test_all_adapters_e2e.py  test_autogen_pipeline.py  test_claude_code_pipeline.py  test_crewai_pipeline.py  test_langgraph_pipeline.py  test_observe_pipeline.py  test_openai_agents_pipeline.py  test_otel_pipeline.py
tests/integration/: test_api_with_storage.py  test_event_pipeline.py  test_run_history_api.py  test_storage_lifecycle.py
tests/plugin/: conftest.py  test_ensure_server.py  test_hook_handler.py  test_integration.py  test_mcp_server.py
tests/smoke/: test_storage_smoke.py
tests/visual/: VISUAL_TEST_REPORT.md  record_demo_video.py  run_visual_tests.py
(+25 files in other folders)
